* fixed issue action not being displayed in the btm list * fixed spacing between start dialog options

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -203,3 +203,9 @@
     }
   }
 }
+
+.js-start-dialog-content {
+  p {
+    margin: 5px 0;
+  }
+}
